--- a/my-registration-app/public/style.css
+++ b/my-registration-app/public/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(180deg, #001021, #000033);
-    background-image: url('https://cdn.wallpapersafari.com/85/16/tMvWFp.jpg');
+    background-image: url('https://r4.wallpaperflare.com/wallpaper/698/189/211/bitcoin-money-coin-cryptocurrency-wallpaper-e91018fd312afdbb36b708afc0c1167d.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
